# clipandcue-pc

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json
docs/: clipboard-format-survey.md
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: capture.rs  commands.rs  formats.rs  history.rs  lib.rs  main.rs  paste.rs  settings.rs  state.rs  survey.rs
